# itzi

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README.rst  RELEASE.rst  appveyor.yml  azure-pipelines.yml  bitbucket-pipelines.yml  boundaries.py  boundary.py  chac_error.py  colortable_default.txt  colortable_depth.txt  colortable_velocity.txt  configreader.py  default.ini  domain.py  drainage.py  flow.pyx  gis.py  hydro.c  hydro.py  hydro.pyx  hydro_cython.pyx  hydro_py.py  infiltration.py  itzi.html  itzi.py  itzi_error.py  massbalance.py  pyproject.toml  rasterdomain.py  rw.py  setup.py  (+8 more)
.github/workflows/: build_wheels.yml  ci.yml  release.yml  tests.yml
benchmarks/: benchmark_rastermetrics.py  benchmark_snippets.py  benchmark_surface_flow.py  benchmark_tutorial.py  conftest.py
doc/: architecture.xmi  eq_test.ods  requirements.md
docs/: Makefile  cli.rst  conf.py  conf_file.rst  faq.rst  index.rst  installation.rst  prog_manual.rst  requirements.txt  tutorial.rst
docs/_static/: custom.css
itzi/: __init__.py  bmi_itzi.py  colortable_velocity.txt  configreader.py  const.py  drainage.py  flow.c  flow.pyx  gis.py  hydrology.py  infiltration.py  itzi.py  itzi_error.py  massbalance.py  messenger.py  rasterdomain.py  resultsreader.py  simulation.py  superficialflow.py  surfaceflow.py
itzi/data/: VERSION  example.ini
itzi/data/colortable/: vdir.txt
itzi/swmm/: .gitignore  Roadmap.txt  run_swmm.py  structs.py  swmm.py  swmm_c.pyx  swmm_error.py  test_arrays.py
itzi/swmm/makefiles/GNU-CLE/: Makefile
itzi/swmm/makefiles/VC2010-DLL/: VC2010-DLL.vcxproj
itzi/swmm/source/: climate.c  consts.h  datetime.c  datetime.h  dynwave.c  error.c  error.h  findroot.c  findroot.h  flowrout.c  globals.h  hash.h  headers.h  hotstart.c  iface.c  infil.c  infil.h  input.c  keywords.c  keywords.h  kinwave.c  lid.c  lid.h  lidproc.c  link.c  macros.h  mathexpr.c  mathexpr.h  mempool.c  mempool.h  objects.h  odesolve.c  odesolve.h  output.c  rain.c  rdii.c  report.c  runoff.c  subcatch.c  swmm5.c  (+8 more)
makefiles/GNU-CLE/: Readme.txt
optimize/: params_optimizer.py
source/: exfil.c  exfil.h  forcmain.c  landuse.c  stats.c  swmm5.c
src/itzi/: __init__.py  array_definitions.py  bmi_itzi.py  configreader.py  const.py  data_containers.py  drainage.py  flow.pyx  gis.py  grass_session.py  hotstart.py  hydrology.py  infiltration.py  itzi.py  itzi_error.py  massbalance.py  messenger.py  parser.py  profiler.py  rasterdomain.py  rastermetrics.py  rastermetrics.pyx  report.py  simulation.py  simulation_builder.py  simulation_factories.py  surfaceflow.py  swmm_input_parser.py
src/itzi/data/: example.ini  tutorial.ini
src/itzi/data/colortable/: default.txt  froude.txt
src/itzi/providers/: __init__.py  base.py  csv_output.py  domain_data.py  geoparquet_output.py  grass_input.py  grass_interface.py  grass_output.py  icechunk_input.py  icechunk_output.py  memory_input.py  memory_output.py  spatialite_output.py  sqlite_output.py  xarray_input.py
swmm/: swmm.py  swmm_error.py
swmm/makefiles/VC2010-DLL/: Readme.txt
swmm/source/: controls.c  culvert.c  dwflow.c  enums.h  funcs.h  gage.c  gwater.c  hash.c  inflow.c  inputrpt.c  massbal.c  node.c  objects.h  project.c  qualrout.c  routing.c  shape.c  snow.c  statsrpt.c  surfqual.c  swmm5.h
tests/: conftest.py  fixtures_vector_output.py  test_5by5.py  test_analytic.py  test_benchmark.py  test_bmi.py  test_boundaries.py  test_csv_vector_output.py  test_drainage.py  test_ea.py  test_ea8a.py  test_ea8b.py  test_ea8b_icechunk.py  test_flow.py  test_geoparquet.py  test_icechunk.py  test_icechunk_input.py  test_icechunk_output.py  test_infiltration.py  test_itzi.py  test_massbalance.py  test_max_values.py  test_openmp_smoke.py  test_rastermetrics.py  test_sloped_channel.py  test_spatialite.py  test_tutorial.py  test_xarray_input.py
tests/cli/: test_cli.py  test_configreader.py
tests/core/: conftest.py  fixtures_vector_output.py  test_5by5.py  test_analytic.py  test_array_definitions.py  test_configreader.py  test_csv_vector_output.py  test_drainage.py  test_ea8a.py  test_ea8b_hotstart.py  test_ea8b_icechunk.py  test_flow.py  test_hotstart_integration.py  test_hotstart_state_loading.py  test_hotstart_timed_inputs.py  test_hotstart_writer_loader.py  test_icechunk_output.py  test_infiltration.py  test_massbalance.py  test_memory_input.py  test_sloped_channel.py  test_stats.py  test_swmm_hotstart_roundtrip.py  test_wse.py  test_xarray_input.py
tests/core/ea8b/: conftest.py  helpers.py  test_hotstart.py  test_scenario.py
tests/grass/: conftest.py  test_bmi.py  test_itzi.py  test_temporal_overwrite.py  test_tutorial.py
tests/grass_tests/: conftest.py  test_bmi.py  test_ea8a.py  test_itzi.py  test_tutorial.py
tests/test_data/: 5by5.ini  test_drainage.inp  test_drainage_bc.asc
tests/test_data/5by5/: 5by5.ini  5by5_mask.ini  5by5_max_values.ini  5by5_open_boundaries.ini  5by5_stats.ini  5by5_wse.ini  control_points.csv
tests/test_data/EA_test_8/a/: ea2dt8a.ini  ea2dt8a.stage  point-inflow.csv
tests/test_data/EA_test_8/b/: test8b_drainage_ponding.inp  test8b_drainage_ponding_mod.inp  xpstorm.csv
tests/test_data/McDonald_long_channel_rain/: axis_points.json  dem.asc  mcdo_rain.csv  mcdo_rain.ini  q.asc
tests/test_data/McDonald_long_channel_wo_rain/: axis_points.json  bctype.asc  dem.asc  mcdo_norain.csv  mcdo_norain.ini  q.asc
tests/test_data/analytic/: mcdo_norain.ini  mcdo_rain.ini
tests/test_data/tutorial_files/: nc_itzi_tutorial_drainage.csv  tutorial.ini  tutorial_drainage.ini  tutorial_drainage.inp
tests/test_data_temp/: elev_lid792_1m.gtiff
testsuite/: test.py  test_boundaries.py  test_domain.py  test_hflow.py  test_igis.py
testsuite/data/flow_5x5/: dem.asc  n.asc  qfix.asc
