[project]
name = "itzi"
version = "25.4"
description = "A distributed dynamic flood model."
authors = [
    {name = "Laurent Courty", email = "lrntct@gmail.com"},
]
dependencies = [
    "numpy==2.2.*",
    "pyinstrument==5.*",
    "pyswmm>=2.0.1",
    "bmipy>=2.0.1",
]
requires-python = ">=3.11"
readme = "README.rst"
license = {text = "GPL-2.0-or-later"}
keywords = ["science", "engineering", "hydrology", "flood"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Hydrology",
]

[project.urls]
Homepage = "http://www.itzi.org"
Documentation = "https://itzi.readthedocs.io"
Repository = "https://github.com/ItziModel/itzi"
Issues = "https://github.com/ItziModel/itzi/issues/"

[project.scripts]
itzi = "itzi.itzi:main"

[dependency-groups]
dev = [
    "pytest==8.3.*",
    "pytest-cov==6.*",
    "pytest-forked==1.*",
    "pandas==2.*",
    "requests==2.*",
    "pytest-benchmark==5.1.*",
    "scipy>=1.15.2",
    "pre-commit>=4.2.0",
    "ruff>=0.11.6",
]

[build-system]
requires = [
    "setuptools==75.*",
    "numpy==2.*",
    "cython==3.*"
]
build-backend = "setuptools.build_meta"

[tool.pdm]
distribution = true

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = ["--import-mode=importlib"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
