[project]
name = "itzi"
version = "25.8"
description = "A distributed dynamic flood model."
authors = [
    {name = "Laurent Courty", email = "lrntct@gmail.com"},
]
dependencies = [
    "numpy>=2.2",
    "pyswmm>=2.0.1",
    "bmipy>=2.0.1",
]
requires-python = ">=3.11,<3.13"  # pyswmm does not support python > 3.12
readme = "README.md"
license = "GPL-2.0-or-later"
keywords = ["science", "engineering", "hydrology", "flood"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Hydrology",
]

[project.urls]
Homepage = "http://www.itzi.org"
Documentation = "https://itzi.readthedocs.io"
Repository = "https://github.com/ItziModel/itzi"
Issues = "https://github.com/ItziModel/itzi/issues/"

[project.scripts]
itzi = "itzi.itzi:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov==6.*",
    "pytest-forked==1.*",
    "pandas==2.*",
    "requests==2.*",
    "pytest-benchmark[histogram]==5.*",
    "scipy>=1.15.2",
    "pre-commit>=4.2.0",
    "ruff>=0.12",
    "ty>=0.0.1a16",
    "pyinstrument==5.*",
]

[build-system]
requires = [
    "setuptools>=80",
    "numpy==2.*",
    "cython==3.*"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.pyx"]
"itzi.data" = ["*.ini"]
"itzi.data.colortable" = ["*.txt"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = ["--import-mode=importlib", "--benchmark-min-rounds=7"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 99

[tool.ty.rules]
# GRASS imports are resolved at runtime
unresolved-import = "ignore"
